--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@handcash/handcash-connect",
-  "version": "0.2.9-beta",
+  "version": "0.2.4",
   "description": "HandCash Connect SDK",
   "main": "src/index.js",
   "scripts": {
@@ -8,40 +8,39 @@
     "start": "node src/app/app.js",
     "lint_src": "eslint --ext .js src/",
     "lint_test": "eslint --ext .test.js test/",
-    "coverage": "NODE_ENV=test nyc mocha \"test/**/*.test.js\" --timeout 10000 --exit --file test/setup.js"
+    "coverage": "NODE_ENV=test nyc --reporter=html mocha \"test/**/*.test.js\" --timeout 10000 --exit --file test/setup.js"
   },
   "keywords": [],
-  "author": "HandCash Labs S.L",
+  "author": "HandCash Labs S.L & Samooth",
   "license": "ISC",
   "dependencies": {
-    "awilix": "^4.2.2",
-    "axios": "^0.21.1",
-    "bsv": "^1.5.4",
-    "crypto-js": "^3.1.9-1",
-    "dotenv": "^8.1.0",
-    "dotenv-flow": "^3.1.0",
+    "awilix": "^6.0.0",
+    "axios": "^0.24.0",
+    "bsv": "^2.0.10",
+    "dotenv": "^10.0.0",
+    "dotenv-flow": "^3.2.0",
     "esm": "^3.2.25",
-    "lodash": "^4.17.19",
-    "run-sdk": "^0.6.23",
+    "lodash": "^4.17.21",
+    "run-sdk": "^0.6.34",
     "s": "^1.0.0",
-    "underscore": "^1.9.1"
+    "underscore": "^1.13.1"
   },
   "devDependencies": {
     "b64-lite": "^1.4.0",
     "babel-eslint": "^8.2.6",
-    "chai": "^4.2.0",
+    "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-mocha": "^5.3.0",
-    "mocha": "^6.2.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-mocha": "^9.0.0",
+    "mocha": "^9.1.3",
     "npm-run-all": "^4.1.5",
-    "nyc": "^13.3.0",
-    "prettier-eslint": "^9.0.0",
-    "sinon": "^7.5.0",
-    "supertest": "^4.0.2"
+    "nyc": "^15.1.0",
+    "prettier-eslint": "^13.0.0",
+    "sinon": "^12.0.1",
+    "supertest": "^6.1.6"
   },
   "optionalDependencies": {
     "win-node-env": "^0.4.0"
